include/dsspm_capi.h

    
    /*
    Get i-th command
    */
    DSSPM_CAPI_DLL char* DSS_Executive_Get_Command(int32_t i);
    
    /*
    Number of DSS Executive Commands
    */
    DSSPM_CAPI_DLL int32_t DSS_Executive_Get_NumCommands(void);
    
    /*
    Number of DSS Executive Options
    */
    DSSPM_CAPI_DLL int32_t DSS_Executive_Get_NumOptions(void);
    
    /*
    Get i-th option
    */
    DSSPM_CAPI_DLL char* DSS_Executive_Get_Option(int32_t i);
    
    /*
    Get help string for i-th command
    */
    DSSPM_CAPI_DLL char* DSS_Executive_Get_CommandHelp(int32_t i);
    
    /*
    Get help string for i-th option
    */
    DSSPM_CAPI_DLL char* DSS_Executive_Get_OptionHelp(int32_t i);
    
    /*
    Get present value of i-th option
    */
    DSSPM_CAPI_DLL char* DSS_Executive_Get_OptionValue(int32_t i);